Fixes low contrast text on vending

--- a/tgui/packages/tgui/styles/components/Section.scss
+++ b/tgui/packages/tgui/styles/components/Section.scss
@@ -41,6 +41,7 @@ $separator-color: colors.$primary !default;
   display: inline-block;
   right: 0.5em;
   margin-top: base.em(-1px);
+  color: $title-text-color;
 }
 
 .Section__rest {
