--- a/tgui/packages/tgui/styles/themes/computer.scss
+++ b/tgui/packages/tgui/styles/themes/computer.scss
@@ -39,8 +39,26 @@
   font-family: monospace;
   // Base overrides
   @include meta.load-css('../atomic/color.scss');
+  // Uses color-fg/color-bg
+  @include meta.load-css('../components/ColorSelectBox.scss');
+  @include meta.load-css('../components/Input.scss');
+  @include meta.load-css('../components/Modal.scss');
+  @include meta.load-css('../components/Section.scss', $with: ('title-text-color': base.$color-bg));
+  @include meta.load-css('../components/Slider.scss');
+  @include meta.load-css('../components/Tabs.scss');
+  @include meta.load-css('../interfaces/ModularFabricator.scss');
+  @include meta.load-css('../interfaces/RequestManager.scss');
   @include meta.load-css('../layouts/Layout.scss');
+  @include meta.load-css('../layouts/PopupWindow.scss');
   @include meta.load-css('../layouts/Window.scss');
+  // Uses colors.scss
+  @include meta.load-css('../components/ProgressBar.scss');
+  @include meta.load-css('../components/NoticeBox.scss');
+  @include meta.load-css('../interfaces/AlertModal.scss');
+  @include meta.load-css('../interfaces/ChemDispenser.scss');
+  @include meta.load-css('../interfaces/ListInput.scss');
+  @include meta.load-css('../interfaces/TechFab.scss');
+  @include meta.load-css('../interfaces/Techweb.scss');
   // Button overrides
   @include meta.load-css('../components/Button.scss', $with: ('color-default': colors.fg(base.$color-bg)));
   // Section overrides
